# OO2026Koodit

./: README.md
QTCpp/SarjaPortinLukija/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
QTCpp/untitled1/: CMakeLists.txt  card.cpp  card.h  card.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pin.cpp  pin.h  pin.ui
Week1/TokaCPP/: CMakeLists.txt  main.cpp
Week1/ekaCppOhjelma/: CMakeLists.txt  main.cpp
Week2/RandomGen/: CMakeLists.txt  lcd.h  main.cpp  mittari.cpp  mittari.h  random.cpp  random.h
Week3/ThisPointteriEsimerkki/: CMakeLists.txt  main.cpp  testi.cpp  testi.h
Week3/TunnillaKoodattuEsimerkki/: CMakeLists.txt  father.cpp  father.h  main.cpp  son.cpp  son.h  sonson.cpp  sonson.h
Week4/MittariKomposition/: CMakeLists.txt  lcd.cpp  lcd.h  main.cpp  mittari.cpp  mittari.h
Week4/MittariPerimalla/: CMakeLists.txt  dht.cpp  dht.h  lcd.cpp  lcd.h  main.cpp  mittari.cpp  mittari.h  random.h
Week4/MuutamiaEsimerkkeja/: CMakeLists.txt  baseclass.cpp  baseclass.h  derivedclass.cpp  derivedclass.h  main.cpp
Week4/assosiationAggregationComposition/: CMakeLists.txt  main.cpp
Week5/Ref_vs_object_parameter/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
Week6/Esimerkki2/: CMakeLists.txt  main.cpp
Week6/Viikon6Esimerkkeja/: CMakeLists.txt  main.cpp  student.cpp  student.h
Week7/Konsolisovellus/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
Week7/WidgetEsimerkki/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Week8/KertausViikko6/: CMakeLists.txt  main.cpp
Week8/KertaustaViikko2/: CMakeLists.txt  kirja.cpp  kirja.h  main.cpp
Week8/KertaustaViikko4/: CMakeLists.txt  auto.cpp  auto.h  main.cpp  moottori.cpp  moottori.h
Week8/KertaustaViikko5/: CMakeLists.txt  lista.cpp  lista.h  main.cpp  solmu.cpp  solmu.h
Week8/QThreadEsimerkki2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
Week8/QtWidgetEsimerkki/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
