cmake_minimum_required(VERSION 3.16)

project(KertausViikko6 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(KertausViikko6 main.cpp)

include(GNUInstallDirs)
install(TARGETS KertausViikko6
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
